# diplom_project

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
courses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_question_answer_test_question_test_testresult.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_groups.py
users/migrations/: 0001_initial.py
